<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnMe"
        android:layout_width="338dp"
        android:layout_height="38dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="36dp"
        android:onClick="fnGreet"
        android:text="@string/click_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvwAge"
        android:layout_width="337dp"
        android:layout_height="61dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="36dp"
        android:text="@string/this_is_first_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtName"
        android:layout_width="337dp"
        android:layout_height="45dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="37dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtYear"
        android:layout_width="337dp"
        android:layout_height="43dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="37dp"
        android:ems="10"
        android:hint="@string/your_year_of_birth"
        android:inputType="textPersonName"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="339dp"
        android:layout_height="38dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="77dp"
        android:onClick="fnThreadedActivity"
        android:text="@string/to_new_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>